--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "v1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -21,6 +23,13 @@
     "react": "18.2.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
+    "redux": "^4.2.0",
+    "redux-persist": "5.10.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-currency-format": "^1.0.0"
   }
 }
