--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "5.10.0",
